--- a/UI/index.html
+++ b/UI/index.html
@@ -35,8 +35,9 @@
             <div class="col-md-12 mt-4 pt-4">
               <div class="text-center">
                   <div id="TextInput" class="d-flex">
-                      <input type="text" class="input-field" name="chatbox" id="chatbox"
+                      <input type="text" id="textInput" for="textInput" class="input-field" name="chatbox" id="chatbox"
                           placeholder="type here ... ">
+                        <button class="glow-on-hover" onclick="getText()">Enter</button>
                       <button id="MicBtn" class="glow-on-hover"><i class="bi bi-mic"></i></button>
                   </div>
               </div>
